<resources>
    <string name="app_name">sTodo</string>
    <string name="type_password">Password</string>
    <string name="show_title">Unlock</string>
    <string name="verify_password">Verify</string>
    <string name="type_pin">Enter Pin</string>
    <string name="retype_pin">Re-Enter Pin</string>
    <string name="store_pin">Confirm</string>
    <string name="enter_todo_title">Title</string>
    <string name="enter_date">Date</string>
    <string name="enter_time">Time</string>
    <string name="enter_period">To</string>
    <string name="enter_priority">Priority</string>
    <string name="save_details">Save</string>
    <string name="describe_task">Description, Time, Day ..etc.</string>
    <string name="content_description">Create</string>
    <string name="task_title">Tasks</string>
    <string name="dont_collect_details">Cancel</string>
    <string name="no_tasks">No Tasks Yet</string>

    <!--Below are bindings -->
    <string name="title_name">Title_name</string>
    <string name="description_value">Description_value</string>
    <string name="new_task">New</string>
    <string name="delete_task">Trash</string>

</resources>
