<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sam.samapp.CreateTaskActivity">


    <Button
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/content_description"
        android:cropToPadding="true"
        android:text="@string/new_task"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@+id/imageButton"
        android:layout_toRightOf="@+id/imageButton"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/delete_task"
        android:textColor="@color/red"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/showTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/task_title"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <ListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/showTitle"
        android:layout_above="@+id/imageButton" />

    <TextView
        android:id="@id/android:empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageButton"
        android:layout_below="@+id/showTitle"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/no_tasks"
        android:typeface="normal" />

</RelativeLayout>
