<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    android:id="@+id/activity_create_password"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="16dp"
    tools:context="com.example.sam.samapp.CreatePasswordActivity">

    <EditText
        android:id="@+id/passwordFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/type_pin"
        android:inputType="numberPassword"
        android:textAlignment="center"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/passwordSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/retype_pin"
        android:inputType="numberPassword"
        android:textAlignment="center"
        android:textSize="14sp" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/store_pin"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

</LinearLayout>
